Revert cutoff fix.

--- a/themes/shoka/source/css/_common/outline/sidebar/sidebar.styl
+++ b/themes/shoka/source/css/_common/outline/sidebar/sidebar.styl
@@ -57,7 +57,7 @@
 
   .panel {
     display: none;
-    padding: 50px .9375rem 2rem;
+    padding: .875rem .9375rem 2rem;
   }
 }
 
